<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.joblist.ui.main.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_candidate"
        android:name="com.example.joblist.ui.main.fragments.CandidateFragment"
        android:label="@string/candidates"
        tools:layout="@layout/fragment_candidate"/>

    <fragment
        android:id="@+id/navigation_job"
        android:name="com.example.joblist.ui.main.fragments.JobFragment"
        android:label="@string/jobs"
        tools:layout="@layout/fragment_job" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.joblist.ui.main.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
