<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itSearch"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itCreateJob"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/create_new_job"
        app:iconTint="@color/white"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/itLogout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:iconTint="@color/white"
        app:showAsAction="always" />
</menu>
