<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.main.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_16sdp"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/_8sdp"
                android:backgroundTint="@android:color/holo_green_light"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_check_24"
                android:visibility="gone"
                app:borderWidth="0dp"
                app:tint="@android:color/white" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_settings_24"
                app:borderWidth="0dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_8sdp"
                android:backgroundTint="@android:color/holo_red_light"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_close_24"
                android:visibility="gone"
                app:borderWidth="0dp"
                app:tint="@android:color/white" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/company_name"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/etCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:enabled="false"
                android:inputType="text"
                android:maxLength="30"
                android:padding="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:enabled="false"
                android:inputType="text"
                android:maxLength="30"
                android:padding="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:padding="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_8sdp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/phone"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:enabled="false"
                android:inputType="phone"
                android:maxLength="30"
                android:padding="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
